--- a/stylesheets/css/app.css
+++ b/stylesheets/css/app.css
@@ -70,18 +70,43 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 5px; }
+  margin: 0 10px; }
+  .image-row1 p, .image-row3 p {
+    display: none; }
   .image-row1 a, .image-row3 a {
     height: 23em;
     margin: 0;
-    width: 23em;
-    background-color: black; }
+    position: relative;
+    width: 23em; }
     @media (min-width: 650px) {
       .image-row1 a, .image-row3 a {
         text-align: center;
         width: calc(50% - 2vw);
         height: calc(50% - 2vw); } }
+    .image-row1 a:hover, .image-row3 a:hover {
+      background-color: black; }
+      .image-row1 a:hover p, .image-row3 a:hover p {
+        color: white;
+        display: block;
+        font-family: "Merriweather", serif;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out; }
+  .image-row1 p, .image-row3 p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
   .image-row1 img, .image-row3 img {
+    display: block;
     height: 23em;
     margin: 0;
     width: 23em; }
@@ -100,27 +125,48 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 10px 10px 10px; }
+  margin: 0 10px; }
+  @media (min-width: 650px) {
+    .image-row2-mobile, .image-row4-mobile {
+      display: none; } }
+  .image-row2-mobile p, .image-row4-mobile p {
+    display: none; }
   .image-row2-mobile a, .image-row4-mobile a {
+    position: relative;
     height: 23em;
     margin: 0;
-    width: 23em;
-    background-color: black; }
+    width: 23em; }
     @media (min-width: 650px) {
       .image-row2-mobile a, .image-row4-mobile a {
         text-align: center;
         width: calc(51% - 2vw);
         height: calc(51% - 2vw); } }
+    .image-row2-mobile a:hover, .image-row4-mobile a:hover {
+      background-color: black; }
+      .image-row2-mobile a:hover p, .image-row4-mobile a:hover p {
+        color: white;
+        display: block;
+        font-family: "Merriweather", serif;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out; }
+  .image-row2-mobile p, .image-row4-mobile p {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%); }
   .image-row2-mobile img, .image-row4-mobile img {
-    width: 23em;
     height: 23em;
-    margin: 0; }
-    @media (min-width: 650px) {
-      .image-row2-mobile img, .image-row4-mobile img {
-        display: none;
-        width: 100%;
-        height: 100%;
-        margin-bottom: 0px; } }
+    margin: 0;
+    width: 23em; }
     .image-row2-mobile img:hover, .image-row4-mobile img:hover {
       opacity: .3;
       transition: opacity .5s ease-out;
@@ -135,25 +181,45 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-around;
-      margin: 0 10px 10px 10px; } }
+      margin: 16px 10px; } }
+  .image-row2-desktop p, .image-row4-desktop p {
+    display: none; }
   .image-row2-desktop a, .image-row4-desktop a {
     height: 23em;
     margin: 0;
-    width: 23em;
-    background-color: black; }
+    position: relative;
+    width: 23em; }
     @media (min-width: 650px) {
       .image-row2-desktop a, .image-row4-desktop a {
+        height: calc(100% - 2vw);
         text-align: center;
-        width: 100%;
-        height: 100%; } }
+        width: calc(100% - 2vw); } }
+    .image-row2-desktop a:hover, .image-row4-desktop a:hover {
+      background-color: black; }
+      .image-row2-desktop a:hover p, .image-row4-desktop a:hover p {
+        color: white;
+        display: block;
+        font-family: "Merriweather", serif;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out; }
   .image-row2-desktop img, .image-row4-desktop img {
+    display: block;
     width: 23em;
     height: 23em;
     margin-bottom: 17px; }
     @media (min-width: 650px) {
       .image-row2-desktop img, .image-row4-desktop img {
-        width: calc(102% - 2vw);
         height: calc(102% - 2vw);
+        width: calc(102% - 2vw);
         margin-bottom: 0px; } }
     .image-row2-desktop img:hover, .image-row4-desktop img:hover {
       opacity: .3;
