--- a/stylesheets/sass/partials/_work.scss
+++ b/stylesheets/sass/partials/_work.scss
@@ -32,19 +32,46 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 5px;
+  margin: 0 10px;
+  p {display:none;}
   a {
-    height: 23em;
-    margin: 0;
-    width: 23em;
-    background-color: black;
     @include pm {
       text-align: center;
       width: calc(50% - 2vw);
       height: calc(50% - 2vw);
     }
+    height: 23em;
+    margin: 0;
+    position: relative;
+    width: 23em;
+    &:hover {
+      background-color: black;
+      p {
+        color: white;
+        display: block;
+        font-family: $work-title-font;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out;
+      }
+    }
+  }
+  p {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
   }
   img {
+    display: block;
     height: 23em;
     margin: 0;
     width: 23em;
@@ -65,31 +92,52 @@
 
 //one column rows ---- mobile
 .image-row2-mobile, .image-row4-mobile{
+  @include pm {display: none;}
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  margin: 0 10px 10px 10px;
+  margin: 0 10px;
+  p {display:none;}
   a {
+    position: relative;
     height: 23em;
     margin: 0;
     width: 23em;
-    background-color: black;
     @include pm {
       text-align: center;
       width: calc(51% - 2vw);
       height: calc(51% - 2vw);
     }
+    &:hover {
+      background-color: black;
+      p {
+        color: white;
+        display: block;
+        font-family: $work-title-font;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out;
+      }
+    }
+  }
+  p {
+    left: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
   img {
-    width: 23em;
     height: 23em;
     margin: 0;
-    @include pm {
-      display: none;
-      width: 100%;
-      height: 100%;
-      margin-bottom: 0px;
-    }
+    width: 23em;
     &:hover {
       opacity: .3;
       transition: opacity .5s ease-out;
@@ -106,27 +154,48 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 0 10px 10px 10px;
+    margin: 16px 10px;
   }
   display: none;
+  p {display:none;}
   a {
     height: 23em;
     margin: 0;
+    position: relative;
     width: 23em;
-    background-color: black;
     @include pm {
+      height: calc(100% - 2vw);
       text-align: center;
-      width: 100%;
-      height: 100%;
+      width: calc(100% - 2vw);
     }
-  }
+    &:hover {
+      background-color: black;
+      p {
+        color: white;
+        display: block;
+        font-family: $work-title-font;
+        font-size: 40px;
+        left: 50%;
+        opacity: 1;
+        pointer-events: none;
+        position: absolute;
+        top: 40%;
+        transform: translate(-50%, -50%);
+        transition: opacity .5s ease-out;
+        -moz-transition: opacity .5s ease-out;
+        -webkit-transition: opacity .5s ease-out;
+        -o-transition: opacity .5s ease-out;
+      }
+    }
+    }
   img {
+    display: block;
     width: 23em;
     height: 23em;
     margin-bottom: 17px;
     @include pm {
-      width: calc(102% - 2vw);
       height: calc(102% - 2vw);
+      width: calc(102% - 2vw);
       margin-bottom: 0px;
     }
     &:hover {
